Changelog for the bépo "TypeMatrix style" layout for the Ergodox EZ keyboard

v9 - 2025-11-02
 - Add a shortcut to print ``` on FN+è (to help with markdown) as this otherwise
   requires a total of 9 key presses (if done with that dead-key)!

v8 - 2025-10-22
 - Fix the copy/paste shortcut on the MacOS variant.
 - Drop the MacOS variant and use OS detection instead to use the correct
   shortcuts.
 - Drop the no_sleep variant and instead use OS detection to emit the correct
   sleep shortcut.
 - Create a left_handed variant that swaps the Macro and Hand-Swap keys, so that
   the keyboard can be used with the right hand only.

v7 - 2025-10-12
 - Different tuning of the mouse keys
 - Adding support for the stm32 Ergodox EZ
 - Adding the macos variant (using different copy/paste shortcut)
 - Improve support of the caps word function (also trigger in the MOUSE layer
   and "capitalize numbers).

v6 - 2024-05-10
 - Add a caps lock key on the right shift key (within they NUM layer).
 - Add a key that prints the current version of the firmware (tab key in the NUM
   layer).
 - Switch the keymap to be defined using bépo string.